@@ -3,6 +3,9 @@
 
 - Help multilib setups that boldly assume that headers are invariant by removing the consistency check in mpg123.h and instead just adding a suffix to relevant functions when _FILE_OFFSET_BITS is defined. Invalid setups will now fail at the linking stage instead of the preprocessing stage.
   That should cover bug 2934488.
+- Make sure the search for the first header aborts after 64K of one-byte reads, as always intended.
+  Certain files (or even random data) were able to fool mpg123 sufficiently enough that it basically reads through the whole file in 1-byte steps in search for MPEG data.
+  The limit of 64K will very likely be configurable in a future mpg123 version.
 
 1.10.0
 ---
